# poetry-example

./: Makefile  README.md  pyproject.toml
bot/: __main__.py
bot/data/: file.txt
