[tool.poetry]
name = "paetry-example"
version = "0.1.0"
description = ""
authors = ["Fobos <95380054+Yastrah@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "paetry_example"}]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
